<!--
  ~ Copyright 2018, The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources xmlns:tools="http://schemas.android.com/tools"  tools:ignore="MissingTranslation">
    <string name="app_name">Edutube Italia</string>
    <string name="about_text">Made with ❤by Giovanni Minelli</string>

    <string name="sharing_not_available">Sharing Not Available</string>
    <string name="format_readTime">%s min  </string>
    <string name="format_creator">by %s</string>
    <string name="format_date">%1$d</string>

    <!-- Menu -->
    <string name="about">About</string>
    <string name="share">Share</string>
    <string name="settings">Settings</string>
    <string name="show_info">Show info</string>
    <string name="add_to_bookmarks">Add to Bookmarks</string>
    <string name="clear">Clear</string>

    <!-- Tab -->
    <string name="tab_main">Main</string>
    <string name="tab_subscriptions">Subscriptions</string>
    <string name="tab_bookmarks">Bookmarked Contents</string>
    <string name="tab_history">History</string>
    <string name="tab_new">New Tab</string>
    <string name="tab_edit">My Contents</string>
    <string name="tab_choose">Choose Tab</string>

    <string name="fragment_whats_new">What\'s New</string>
    <string name="controls_lock_title">Lock view</string>
    <string name="controls_add_to_playlist_title">Add</string>
    <string name="play_audio">Audio</string>

    <string name="switch_creator_title">Enable creator features</string>
    <string name="switch_notification_title">Enable daily notification</string>
    <string name="theme_title">Theme</string>
    <string name="light_theme_title">Light</string>
    <string name="dark_theme_title">Dark</string>
    <string name="black_theme_title">Black</string>
    <string name="settings_category_player_behavior_title">Behavior</string>
    <string name="settings_category_video_audio_title">Video &amp; audio</string>
    <string name="settings_category_history_title">History &amp; cache</string>
    <string name="enable_watch_history_title">History &amp; Cache</string>
    <string name="settings_category_popup_title">Popup</string>
    <string name="settings_category_appearance_title">Appearance</string>
    <string name="settings_category_other_title">Other</string>
    <string name="show_comments_title">Show comments</string>
    <string name="show_comments_summary">Disable to stop showing comments</string>

    <string name="content">Content</string>
    <string name="all">All</string>
    <string name="creator">Creator</string>
    <string name="creators">Creators</string>
    <string name="uploader">Uploader</string>
    <string name="uploaders">Uploaders</string>
    <string name="contents">Contents</string>
    <string name="comments">Comments</string>
    <string name="users">Users</string>
    <string name="events">Events</string>
    <string name="yes">Yes</string>
    <string name="later">Later</string>
    <string name="disabled">Disabled</string>
    <string name="filter">Filter</string>
    <string name="refresh">Refresh</string>

    <string name="clear_views_history_title">Clear watch history</string>
    <string name="clear_views_history_summary">Deletes the history of played streams</string>
    <string name="delete_view_history_alert">Delete entire watch history?</string>
    <string name="view_history_deleted">Watch history deleted.</string>
    <!-- error strings -->
    <string name="general_error">Error</string>
    <string name="network_error">Network error</string>

    <!-- Content descriptions (for better accessibility) -->
    <string name="list_thumbnail_view_description">Video preview thumbnail</string>
    <string name="detail_uploader_thumbnail_view_description">Uploader\'s avatar thumbnail</string>
    <string name="detail_likes_img_view_description">Likes</string>
    <string name="detail_dislikes_img_view_description">Dislikes</string>
    <string name="search_no_results">No results</string>
    <string name="empty_view_no_contents" translatable="false">@string/no_contents</string>
    <string name="empty_view_subtitle">Nothing here *crickets chirp*</string>
    <string name="detail_drag_description">Drag to reorder</string>
    <string name="history_empty">History empty</string>
    <string name="empty"/>

    <string name="err_dir_create">Cannot create download directory \'%1$s\'</string>
    <string name="info_dir_created">Created download directory \'%1$s\'</string>

    <string name="video">Video</string>
    <string name="audio">Audio</string>
    <string name="retry">Retry</string>
    <string name="storage_permission_denied">Storage access permission denied</string>

    <string name="short_thousand">K</string>
    <string name="short_million">M</string>
    <string name="short_billion">B</string>


    <string name="no_contents">No contents</string>
    <plurals name="contents">
        <item quantity="one">Content</item>
        <item quantity="other">Contents</item>
    </plurals>

    <string name="select_a_category">Select a category</string>
    <string name="append_playlist">Add To</string>
    <string name="unbookmark_playlist">Remove Bookmark</string>

    <!-- Subscriptions import/export -->
    <string name="import_export_title">Import/export</string>
    <string name="import_title">Import</string>
    <string name="import_from">Import from</string>
    <string name="export_to">Export to</string>
    <string name="import_ongoing">Importing…</string>
    <string name="export_ongoing">Exporting…</string>
    <string name="import_file_title">Import file</string>
    <string name="subscriptions_import_unsuccessful">Could not import subscriptions</string>
    <string name="subscriptions_export_unsuccessful">Could not export subscriptions</string>

    <string name="list_view_mode">List view mode</string>
    <string name="list">List</string>
    <string name="grid">Grid</string>
    <string name="auto">Auto</string>
    <string name="switch_view">Switch View</string>
    <string name="close">Close</string>

    <!-- DIALOG -->
    <string name="dialog_title">Insert link</string>
    <string name="dialog_edit_hint">http(s)://</string>
    <string name="dialog_button_ok">OK</string>
    <string name="dialog_button_cancel">Cancel</string>

    <!-- MENU -->
    <string name="menu_undo">Undo</string>
    <string name="menu_redo">Redo</string>
    <string name="menu_save">Save</string>

    <!-- PERMISSION -->
    <string name="permission_required_media_camera">Camera and storage permissions required to access camera</string>
    <string name="permission_required_media_photos">Storage permission required to access photos</string>
    <string name="permission_required_media_videos">Storage permission required to access videos</string>

    <string name="edit_hint">Content text</string>
    <string name="source_hint">Source content text</string>

</resources>
