<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/filter"
        android:icon="?attr/filter"
        android:title="@string/filter"
        app:showAsAction="always">
        <menu>
            <group
                android:id="@+id/search_filter_group"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_filter_all"
                    android:checked="true"
                    android:title="@string/all"/>
                <item
                    android:id="@+id/menu_filter_content"
                    android:title="@string/content"/>
                <item
                    android:id="@+id/menu_filter_creator"
                    android:title="@string/creator"/>
                <item
                    android:id="@+id/menu_filter_uploader"
                    android:title="@string/uploader"/>
            </group>
        </menu>
    </item>


</menu>